X   X   
    * Add Sword + Feather Falling = launch victim (right-click)
    * Add Hoe + Knockback = eat dirt (right-click to knock into ground)
    * Add Boots + Feather Falling X = zero fall damage
    * Add Sword + Blast Protection = shoot fireball (right-click)
    * Remove Sword + Flame = lit path (sorry, doesn't work in 1.2+)
    * Remove Axe + Flame II, Pickaxe + Flame II, Shovel + Flame II (see above)
    * Configurable duration and amplifier to Axe + Aqua Affinity = slowness effect
    * Cnfigurable trunk width and two extra block IDs to Axe + Power = fell tree
    * Support for chopping down RP2/IC2 Rubbertrees with Axe + Power = fell tree
    * Configurable velocity multipler to Boots + Power = witch's broom
    * Configurable Y velocity to Boots + Punch = hover jump
    * Nerf Boots + Punch = hover jump, now jumps 0.7 instead of 1.0 by default
    * Configurable range and duration to Bow + Aqua Affinity = freeze
    * Configurable range and duration to Bow + Bane of Arthropods = poison
    * Improve Bow + Efficiency = instant shoot, now cannot pickup the shot arrows
    * Configurable power to Bow + Fire Aspect = fiery explosions
    * Configurable payloads (spawn egg, TNT, bucket, potion, etc.) to Bow + Respiration = stapled arrows
    * Configurable velocity multipler to Bow + Sharpness = increase velocity
    * Configurable projectile/living entity teleportation in Bow + Silk Touch = magnetic arrows
    * Fix Sword + Infinity, now damages item on use
    * Fix Chestplate + Knockback = reflect arrows, picking up reflected skeleton arrows

2012-03-13  0.8.2
    * Add Sword + Punch = knock out of hand (right-click player)
    * Add Sword + Fortune = pickpocket (right-click player)
    * Add Sword + Infinity = selective invisibility (right-click player)
    * Add Sword + Respiration = banhammer (1=kick, 2+=temp ban)
    * Add Chestplate + Punch = brass knuckles (more damage with fists)
    * Add Chestplate + Respiration = fish mode (no damage in water)